fix: set filter panel max height and add scrollbar

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
     position: sticky;
     border-radius: 0;
     top: 0;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .left {
