--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -28,6 +28,10 @@
     gap: 8px;
 }
 
+.filterWrapper {
+    position: relative;
+}
+
 .filterBtn {
     display: flex;
     align-items: center;
